# ml-feature-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: pipeline_config.yaml
config/feature_definitions/: customer_features.yaml  transaction_features.yaml
dags/: feature_pipeline_dag.py
dags/utils/: dag_helpers.py
docker/airflow/: Dockerfile
registry/: feature_registry.json
src/config/: loader.py  models.py
src/features/: aggregation_transformer.py  base_transformer.py  encoding_transformer.py  feature_assembler.py  null_handler.py  time_window_transformer.py
src/ingestion/: s3_reader.py
src/output/: feature_store_writer.py  registry_updater.py
src/spark/: session.py
src/validation/: models.py  null_checker.py  quality_gate.py  schema_validator.py
tests/: conftest.py
tests/dag_tests/: conftest.py  test_dag_integrity.py
tests/unit/: test_aggregation_transformer.py  test_encoding_transformer.py  test_null_handler.py  test_quality_gate.py  test_schema_validator.py  test_time_window_transformer.py
